@@ -13,6 +13,7 @@
 // - https://github.com/codecentric/chaos-monkey-spring-boot/pull/xxx[#xxx] Added example entry. Please don't remove.
 - https://github.com/codecentric/chaos-monkey-spring-boot/pull/220[#220] Added `ChaosToggles` and `ChaosToggleNameMapper` interfaces as well as support for a default https://github.com/Unleash/unleash[Unleash] based `ChaosToggles` implementation
 - https://github.com/codecentric/chaos-monkey-spring-boot/pull/229[#93] Added support to attack outgoing requests with _RestTemplate_ and _WebClient_
+- https://github.com/codecentric/chaos-monkey-spring-boot/pull/240[#240] Added support to attack _HealthIndicator_ with exception and latency assault
 
 === Contributors
 This release was only possible because of these great humans:
